--- a/src/main/resources/UIxpathMap.properties
+++ b/src/main/resources/UIxpathMap.properties
@@ -26,8 +26,8 @@ Baidu.Login.InputPwd = //input[contains(@name, 'password')]
 Baidu.Login.Button.Alert = (//p[contains(@class, 'pass-form-item-submit')]/child::input)[1]
 
 # 图片登录验证
-# Baidu.Login.Img.Assert = //div[contains(@class, 'header')]/h3
-Baidu.Login.Img.Assert = //div[contains(@class, 'mod-vcode-content-mkd')]/p[1]
+Baidu.Login.Img.Assert = //div[contains(@class, 'header')]/h3
+# Baidu.Login.Img.Assert = //div[contains(@class, 'mod-vcode-content-mkd')]/p[1]
 
 # 登录成功验证
 BaiDu.Logined.Succeed.Img = (//span[contains(@class, 's-top-img-wrapper')]/child::img)[1]
